--- a/overlay/SettingsProviderResCommon/res/values/defaults.xml
+++ b/overlay/SettingsProviderResCommon/res/values/defaults.xml
@@ -8,5 +8,5 @@
     <bool name="def_screen_brightness_automatic_mode">true</bool>
 
     <!-- Default for Settings.Global.DEVICE_NAME $1=MODEL-->
-    <string name="def_device_name_simple" translatable="false">Fairphone 5 5G</string>
+    <string name="def_device_name_simple" translatable="false">SHIFTphone 8</string>
 </resources>
