--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -16,23 +16,6 @@
     <!-- Whether device supports double tap to wake -->
     <bool name="config_supportDoubleTapWake">true</bool>
 
-    <!-- An array of arrays of side fingerprint sensor properties relative to each display.
-         Note: this value is temporary and is expected to be queried directly
-         from the HAL in the future. -->
-    <array name="config_sfps_sensor_props">
-        <item>@array/config_sfps_sensor_props_0</item>
-    </array>
-
-    <array name="config_sfps_sensor_props_0">
-        <item>local:4630946480328692354</item> <!--item>displayId</item-->
-        <item>1224</item> <!--item>sensorLocationX</item-->
-        <item>1105</item> <!--item>sensorLocationY</item-->
-        <item>200</item> <!--item>sensorRadius</item-->
-    </array>
-
-    <!-- Indicates whether device has a power button fingerprint sensor. -->
-    <bool name="config_is_powerbutton_fps">true</bool>
-
     <!-- Indicate available ColorDisplayManager.COLOR_MODE_xxx. -->
     <integer-array name="config_availableColorModes">
         <item>0</item>
@@ -73,6 +56,13 @@
         <item>eutran5gc,15</item>
     </string-array>
 
+    <!-- The properties of a UDFPS sensor in pixels, in the order listed below: -->
+    <integer-array name="config_udfps_sensor_props" translatable="false">
+        <item>540</item>
+        <item>2178</item>
+        <item>90</item>
+    </integer-array>
+
     <!-- List of comma separated package names for which we the system will not show crash, ANR,
          etc. dialogs. -->
     <string name="config_appsNotReportingCrashes" translatable="false">com.google.android.euicc</string>
@@ -110,8 +100,8 @@
     </string>
 
     <!-- MMS user agent string -->
-    <string name="config_mms_user_agent" translatable="false">FP5-MMS/2.0</string>
+    <string name="config_mms_user_agent" translatable="false">Android-Mms/2.0</string>
 
     <!-- MMS user agent prolfile url -->
-    <string name="config_mms_user_agent_profile_url" translatable="false">https://techsupport.fairphone.com/uap/FP5_UAP.xml</string>
+    <string name="config_mms_user_agent_profile_url" translatable="false">http://www.google.com/oha/rdf/ua-profile-kila.xml</string>
 </resources>
