--- a/overlay/FrameworksResTarget/res/values/dimens.xml
+++ b/overlay/FrameworksResTarget/res/values/dimens.xml
@@ -11,7 +11,7 @@
     <!-- Height of the status bar in portrait.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
-    <dimen name="status_bar_height_portrait">103px</dimen>
+    <dimen name="status_bar_height_portrait">28dp</dimen>
 
     <!-- Height of the status bar in landscape.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
