--- a/overlay/SystemUIResTarget/res/values/dimens.xml
+++ b/overlay/SystemUIResTarget/res/values/dimens.xml
@@ -8,7 +8,7 @@
     <dimen name="status_bar_padding_top">18px</dimen>
 
     <!-- Height of the status bar header bar when on Keyguard -->
-    <dimen name="status_bar_header_height_keyguard">@null</dimen>
+    <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height</dimen>
 
     <dimen name="rounded_corner_content_padding">24px</dimen>
 
