--- a/overlay/SystemUIResTarget/res/values/config.xml
+++ b/overlay/SystemUIResTarget/res/values/config.xml
@@ -4,6 +4,28 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
+    <!-- A path similar to frameworks/base/core/res/res/values/config.xml
+      config_mainBuiltInDisplayCutout that describes a path larger than the exact path of a outer
+      display cutout. If present as well as config_enableDisplayCutoutProtection is set to true,
+      then SystemUI will draw this "protection path" instead of the display cutout path that is
+      normally used for anti-aliasing.
+
+      This path will only be drawn when the front-facing camera turns on, otherwise the main
+      DisplayCutout path will be rendered
+       -->
+    <string translatable="false" name="config_frontBuiltInDisplayCutoutProtection">
+        M 503,46.5
+        a 37,37 0 1 0 74,0
+        a 37,37 0 1 0 -74,0
+        Z
+    </string>
+
+    <!-- ID for the camera of outer display that needs extra protection -->
+    <string translatable="false" name="config_protectedCameraId">1</string>
+
+    <!--  Flag to turn on the rendering of the above path or not  -->
+    <bool name="config_enableDisplayCutoutProtection">true</bool>
+
     <!-- Whether to show a warning notification when device's skin temperature is high. -->
     <integer name="config_showTemperatureWarning">1</integer>
 
