--- a/overlay/FrameworksResTarget/res/values/config.xml
+++ b/overlay/FrameworksResTarget/res/values/config.xml
@@ -58,9 +58,9 @@
 
     <!-- The properties of a UDFPS sensor in pixels, in the order listed below: -->
     <integer-array name="config_udfps_sensor_props" translatable="false">
-        <item>540</item>
-        <item>2178</item>
-        <item>90</item>
+        <item>540</item>  <!-- <item>sensorLocationX</item> -->
+        <item>2178</item> <!-- <item>sensorLocationY</item> -->
+        <item>90</item>   <!-- <item>sensorRadius</item> -->
     </integer-array>
 
     <!-- List of comma separated package names for which we the system will not show crash, ANR,
