--- a/overlay/SettingsResCommon/res/values/config.xml
+++ b/overlay/SettingsResCommon/res/values/config.xml
@@ -6,4 +6,7 @@
 <resources>
     <!-- Whether to show Smooth Display feature in Settings Options -->
     <bool name="config_show_smooth_display">true</bool>
+
+    <!-- The radius of the enrollment progress bar, in dp -->
+    <integer name="config_udfpsEnrollProgressBar" translatable="false">120</integer>
 </resources>
