--- a/overlay/SystemUIResTarget/res/values/dimens.xml
+++ b/overlay/SystemUIResTarget/res/values/dimens.xml
@@ -12,6 +12,8 @@
 
     <dimen name="rounded_corner_content_padding">24px</dimen>
 
+    <dimen name="keyguard_indication_margin_bottom">300px</dimen>
+
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">800px</dimen>
 
