--- a/overlay/SystemUIResTarget/res/values/dimens.xml
+++ b/overlay/SystemUIResTarget/res/values/dimens.xml
@@ -13,6 +13,8 @@
     <!--  Total minimum padding to enforce to ensure that the dot can always show  -->
     <dimen name="ongoing_appops_dot_min_padding">14dp</dimen>
 
+    <dimen name="keyguard_indication_margin_bottom">300px</dimen>
+
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">800px</dimen>
 
